Add midi functionality

--- a/Builds/MacOSX/Info-AU.plist
+++ b/Builds/MacOSX/Info-AU.plist
@@ -37,7 +37,7 @@
         <key>manufacturer</key>
         <string>CUTE</string>
         <key>type</key>
-        <string>aufx</string>
+        <string>aumf</string>
         <key>subtype</key>
         <string>Gg1i</string>
         <key>version</key>
