wip: broken but basic ADSR

--- a/Builds/MacOSX/PinkTrombone.xcodeproj/xcshareddata/xcschemes/PinkTrombone - VST3.xcscheme
+++ b/Builds/MacOSX/PinkTrombone.xcodeproj/xcshareddata/xcschemes/PinkTrombone - VST3.xcscheme
@@ -42,7 +42,7 @@
       allowLocationSimulation = "YES">
       <PathRunnable
          runnableDebuggingMode = "0"
-         FilePath = "/Applications/REAPER.app">
+         FilePath = "/Applications/Max.app">
       </PathRunnable>
    </LaunchAction>
    <ProfileAction
